--- a/public/v/b/index.html
+++ b/public/v/b/index.html
@@ -11,7 +11,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap" rel="stylesheet">
 
   <meta name="description"
     content="Психолог онлайн. Помощь при тревоге методом КПТ — структурированный подход с практическими техниками. Консультации онлайн, конфиденциально.">
@@ -99,73 +99,20 @@
   
   
   
-  <link rel="stylesheet" href="http://localhost:1313/css/main.min.52d644a2f41b9158c1e9e4428a28552ab9cb1df5fa73e7bda06ddafe127fded5.css" integrity="sha256-UtZEovQbkVjB6eRCiihVKrnLHfX6c&#43;e9oG3a/hJ/3tU=">
+  <link rel="stylesheet" href="http://localhost:1313/css/main.min.361a8944e5f62995ac99f99595cc4ecee167d51f45a6bf44c7551aa055ec7f03.css" integrity="sha256-NhqJROX2KZWsmfmVlcxOzuFn1R9Fpr9Ex1UaoFXsfwM=">
   
 
   
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    html {
-      font-size: 16px;
-    }
-
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-      font-size: 16px;
-      line-height: 1.6;
-      color: var(--color-text, #1a1a1a);
-      background-color: var(--color-bg, #ffffff);
-      -webkit-font-smoothing: antialiased;
-    }
-
-    .hero {
-      padding: 32px 16px;
-      background-color: var(--color-bg-light, #f8f9fa);
-    }
-
-    .hero__title {
-      font-size: 28px;
-      font-weight: 700;
-      line-height: 1.2;
-      margin-bottom: 16px;
-    }
-
-    .hero__subtitle {
-      font-size: 18px;
-      color: var(--color-text-light, #666666);
-      margin-bottom: 24px;
-    }
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 44px;
-      padding: 12px 24px;
-      font-size: 16px;
-      font-weight: 600;
-      border: 2px solid transparent;
-      border-radius: 8px;
-      cursor: pointer;
-      text-decoration: none;
-      transition: all 0.2s ease;
-    }
-
-    .btn--primary {
-      background-color: var(--color-primary, #0088cc);
-      color: white;
-    }
-
-    .btn--secondary {
-      background-color: var(--color-secondary, #25D366);
-      color: white;
-    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    html{font-size:16px}
+    body{margin:0;font-family:'Outfit',sans-serif;font-size:16px;line-height:1.65;color:var(--color-text,#2a2520);background-color:var(--color-bg,#faf9f7);-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+    .hero{padding:80px 16px 72px;background:var(--color-hero-bg,#2a2520);color:var(--color-hero-text,#f5f0ea);position:relative;overflow:hidden}
+    .hero__title{font-family:'Playfair Display',Georgia,serif;font-size:30px;font-weight:500;line-height:1.18;margin-bottom:20px;letter-spacing:-0.01em;color:var(--color-hero-text,#f5f0ea)}
+    .hero__subtitle{font-size:16px;line-height:1.7;margin-bottom:24px;opacity:0.7;color:var(--color-hero-text,#f5f0ea)}
+    .btn{display:inline-flex;align-items:center;justify-content:center;min-height:48px;padding:14px 32px;font-family:'Outfit',sans-serif;font-size:14px;font-weight:600;letter-spacing:0.06em;text-transform:uppercase;border:1.5px solid transparent;border-radius:6px;cursor:pointer;text-decoration:none;transition:all 0.35s cubic-bezier(0.4,0,0.2,1)}
+    .btn--primary{background-color:var(--color-gold,#c9a96e);color:var(--color-hero-bg,#2a2520);border-color:var(--color-gold,#c9a96e)}
+    .btn--secondary{background-color:transparent;color:var(--color-hero-text,#f5f0ea);border-color:rgba(245,240,234,0.3)}
   </style>
 
   
@@ -229,12 +176,12 @@
       <h2 class="section__title">Я знаю, каково это</h2>
 
       <div class="empathy-block"
-        style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px; margin-bottom: 32px;">
-        <p style="font-size: 18px; line-height: 1.7; margin-bottom: 16px;">
+        style="background: var(--color-bg-light); padding: 24px; border-radius: 12px; margin-bottom: 32px; border: 1px solid var(--color-border);">
+        <p style="font-size: 16px; line-height: 1.75; margin-bottom: 16px; color: var(--color-text-light);">
           Просыпаться с тревогой. Избегать звонков, встреч, решений. Перебирать в голове худшие сценарии. Ощущать
           постоянное напряжение, которое не отпускает.
         </p>
-        <p style="font-size: 18px; line-height: 1.7; font-weight: 600;">
+        <p style="font-size: 16px; line-height: 1.75; font-weight: 600; color: var(--color-text);">
           Вы не сломаны. Вы не «слишком чувствительны». Ваш мозг просто застрял в режиме тревоги — и с этим можно
           работать.
         </p>
@@ -302,24 +249,24 @@
 
       <div class="benefits__timeline" style="display: grid; gap: 24px; margin-bottom: 32px;">
         <div class="timeline-block"
-          style="background: linear-gradient(135deg, #e8f4f8 0%, #d4e8ed 100%); padding: 24px; border-radius: 12px; border-left: 4px solid var(--color-primary, #0088cc);">
-          <h3 style="font-size: 20px; margin-bottom: 12px; color: var(--color-primary, #0088cc);">На первых этапах</h3>
-          <p style="padding: 8px 0;">Появится понимание причин вашего состояния, освоите базовые техники снижения
+          style="background: var(--color-bg-light); padding: 24px; border-radius: 12px; border-left: 3px solid var(--color-gold, #c9a96e); border: 1px solid var(--color-border); border-left: 3px solid var(--color-gold, #c9a96e);">
+          <h3 style="font-family: 'Playfair Display', Georgia, serif; font-size: 19px; margin-bottom: 12px; color: var(--color-text); font-weight: 500;">На первых этапах</h3>
+          <p style="padding: 8px 0; font-size: 14px; color: var(--color-text-light); line-height: 1.7;">Появится понимание причин вашего состояния, освоите базовые техники снижения
             напряжения, почувствуете больше контроля.</p>
         </div>
 
         <div class="timeline-block"
-          style="background: linear-gradient(135deg, #e8f8e8 0%, #d4edd4 100%); padding: 24px; border-radius: 12px; border-left: 4px solid #25D366;">
-          <h3 style="font-size: 20px; margin-bottom: 12px; color: #25D366;">В процессе работы</h3>
-          <p style="padding: 8px 0;">В процессе работы вы освоите навыки, которые помогают снижать интенсивность
+          style="background: var(--color-bg-light); padding: 24px; border-radius: 12px; border: 1px solid var(--color-border); border-left: 3px solid var(--color-gold, #c9a96e);">
+          <h3 style="font-family: 'Playfair Display', Georgia, serif; font-size: 19px; margin-bottom: 12px; color: var(--color-text); font-weight: 500;">В процессе работы</h3>
+          <p style="padding: 8px 0; font-size: 14px; color: var(--color-text-light); line-height: 1.7;">В процессе работы вы освоите навыки, которые помогают снижать интенсивность
             тревоги, спокойнее реагировать на сложные
             ситуации и выстраивать более устойчивый режим сна</p>
         </div>
 
         <div class="timeline-block"
-          style="background: linear-gradient(135deg, #f8f4e8 0%, #ede8d4 100%); padding: 24px; border-radius: 12px; border-left: 4px solid #FFA500;">
-          <h3 style="font-size: 20px; margin-bottom: 12px; color: #FFA500;">Результат</h3>
-          <p style="padding: 8px 0;">Вы получите набор инструментов для самостоятельного управления стрессом.</p>
+          style="background: var(--color-bg-light); padding: 24px; border-radius: 12px; border: 1px solid var(--color-border); border-left: 3px solid var(--color-gold, #c9a96e);">
+          <h3 style="font-family: 'Playfair Display', Georgia, serif; font-size: 19px; margin-bottom: 12px; color: var(--color-text); font-weight: 500;">Результат</h3>
+          <p style="padding: 8px 0; font-size: 14px; color: var(--color-text-light); line-height: 1.7;">Вы получите набор инструментов для самостоятельного управления стрессом.</p>
         </div>
       </div>
 
@@ -344,32 +291,32 @@
       <div class="testimonials__grid" style="display: grid; gap: 24px; margin-top: 32px;">
 
         <div class="testimonial-card-b"
-          style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px;">
-          <div style="font-size: 24px; font-weight: 700; color: var(--color-primary, #0088cc); margin-bottom: 8px;">
+          style="background: white; padding: 28px; border-radius: 12px; border: 1px solid var(--color-border);">
+          <div style="font-family: 'Playfair Display', Georgia, serif; font-size: 20px; font-weight: 500; color: var(--color-text); margin-bottom: 8px; font-style: italic;">
             «Стало проще справляться с тревогой»
           </div>
-          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Анна, 32 года</div>
-          <p>Работа в КПТ-подходе помогла Анне постепенно вернуться к привычным действиям. Теперь она снова пользуется
+          <div style="font-size: 12px; color: var(--color-text-light); margin-bottom: 16px; letter-spacing: 0.04em; text-transform: uppercase; font-weight: 500;">Анна, 32 года</div>
+          <p style="font-size: 14px; color: var(--color-text-light); line-height: 1.7;">Работа в КПТ-подходе помогла Анне постепенно вернуться к привычным действиям. Теперь она снова пользуется
             транспортом и чувствует себя увереннее в поездках.</p>
         </div>
 
         <div class="testimonial-card-b"
-          style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px;">
-          <div style="font-size: 24px; font-weight: 700; color: var(--color-primary, #0088cc); margin-bottom: 8px;">
+          style="background: white; padding: 28px; border-radius: 12px; border: 1px solid var(--color-border);">
+          <div style="font-family: 'Playfair Display', Georgia, serif; font-size: 20px; font-weight: 500; color: var(--color-text); margin-bottom: 8px; font-style: italic;">
             «Вернулось спокойствие и нормальный сон»
           </div>
-          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Дмитрий, 28 лет</div>
-          <p>Мы работали с автоматическими мыслями и техниками релаксации. Дмитрий перестал постоянно беспокоиться о
+          <div style="font-size: 12px; color: var(--color-text-light); margin-bottom: 16px; letter-spacing: 0.04em; text-transform: uppercase; font-weight: 500;">Дмитрий, 28 лет</div>
+          <p style="font-size: 14px; color: var(--color-text-light); line-height: 1.7;">Мы работали с автоматическими мыслями и техниками релаксации. Дмитрий перестал постоянно беспокоиться о
             будущем и стал быстрее засыпать.</p>
         </div>
 
         <div class="testimonial-card-b"
-          style="background: var(--color-bg-light, #f8f9fa); padding: 24px; border-radius: 12px;">
-          <div style="font-size: 24px; font-weight: 700; color: var(--color-primary, #0088cc); margin-bottom: 8px;">
+          style="background: white; padding: 28px; border-radius: 12px; border: 1px solid var(--color-border);">
+          <div style="font-family: 'Playfair Display', Georgia, serif; font-size: 20px; font-weight: 500; color: var(--color-text); margin-bottom: 8px; font-style: italic;">
             «Уверенность в рабочих ситуациях»
           </div>
-          <div style="font-size: 14px; color: #666; margin-bottom: 16px;">Екатерина, 41 год</div>
-          <p>Екатерина освоила навыки саморегуляции и смогла выступить на конференции. Тревога перед совещаниями стала
+          <div style="font-size: 12px; color: var(--color-text-light); margin-bottom: 16px; letter-spacing: 0.04em; text-transform: uppercase; font-weight: 500;">Екатерина, 41 год</div>
+          <p style="font-size: 14px; color: var(--color-text-light); line-height: 1.7;">Екатерина освоила навыки саморегуляции и смогла выступить на конференции. Тревога перед совещаниями стала
             управляемой и больше не мешает карьере.</p>
         </div>
 
@@ -402,14 +349,14 @@
 
         <div class="about__info">
           <div class="about__bio">
-            <p style="font-size: 18px; margin-bottom: 16px;">
+            <p style="font-size: 15px; margin-bottom: 16px; line-height: 1.8;">
               <strong>Я — Ксения Парваткина</strong>, психолог, специализируюсь на когнитивно-поведенческой терапии
               (КПТ) — структурном методе работы с тревожными состояниями.
             </p>
           </div>
 
           <div class="about__credentials"
-            style="background: var(--color-bg-light, #f8f9fa); padding: 20px; border-radius: 12px; margin-bottom: 20px;">
+            style="background: var(--color-bg-light); padding: 20px; border-radius: 12px; margin-bottom: 20px; border: 1px solid var(--color-border);">
             <h3 class="credentials__title">Квалификация</h3>
             <ul class="credentials__list">
               <li>Магистр психологии, <strong>МИП</strong></li>
@@ -560,7 +507,7 @@
         </div>
       </div>
 
-      <div class="pricing__note" style="text-align: center; margin-top: 24px; color: #666; font-size: 14px;">
+      <div class="pricing__note" style="text-align: center; margin-top: 24px; color: var(--color-text-light); font-size: 13px;">
         Оплата: карта, СБП, USDT. Отмена за 24 часа — без штрафа.<br>
         Все условия работы обсуждаются на вводной встрече.
       </div>
